Documents page coming together

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -2,27 +2,25 @@
 <html lang="se">
 
 <head>
-	<title>Besiktningsman.se | Om oss</title>
+	<title>Besiktningsman.se | Dokument</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningsman, entreprenadbesiktning, kontakta besiktningsman ledning, besiktningsman ledning">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
+	<meta name="description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="http://www.besiktningsman.se/om_oss" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
-	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta property="og:url" content="http://www.besiktningsman.se/om_oss" />
-	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
+	<meta property="og:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
+	<meta property="og:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
+	<meta property="og:url" content="http://www.besiktningsman.se/dokument" />
+	<meta property="og:site_name" content="Besiktningsman.se | Dokument">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
-	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
-	<meta name="twitter:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
+	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
+	<meta name="twitter:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
@@ -180,65 +178,96 @@
 							<br>
 							På detta vis kan du undvika extra kostnader men även förstå vad som pågår när du renoverar eller bygger till.
 						</p>
+						<h2>Besiktningar för bostadsrättsföreningar</h2>
+						<ul class="grid grid-74 later equal left margin-top-5">
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
+								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank" class="box-74">
+									<div class="thumbnail-74">
+										<img src="../assets/img/backgrounds/brf_sb_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+									</div>
+								</a>
+							</li>
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
+								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank" class="box-74">
+									<div class="thumbnail-74">
+										<img src="../assets/img/backgrounds/brf_eb_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+									</div>
+								</a>
+							</li>
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
+								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="box-74">
+									<div class="thumbnail-74">
+										<img src="../assets/img/backgrounds/brf_ssb_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+									</div>
+								</a>
+							</li>
+						</ul>
+						<br>
+						<h2>Formulär & böcker</h2>
+						<ul class="grid grid-74 later equal left margin-top-5">
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
+								<a href="../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" target="_blank" class="box-74">
+									<div class="thumbnail-74">
+										<img src="../assets/img/backgrounds/hantverkarformularet14_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+									</div>
+								</a>
+							</li>
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
+								<a href="../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" target="_blank" class="box-74">
+									<div class="thumbnail-74">
+										<img src="../assets/img/backgrounds/besiktningsmannaboken16_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+									</div>
+								</a>
+							</li>
+							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
+								<a href="../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" target="_blank" class="box-74">
+									<div class="thumbnail-74">
+										<img src="../assets/img/backgrounds/konsumenttjanstlagen_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+									</div>
+								</a>
+							</li>
+						</ul>
+						<br>
 						<h2>Allmänt</h2>
 						<ul class="left">
 							<li>
-								<a href="../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" target="_blank" class="text-blue bold small">Besiktningsmannaboken 2016</a>
+								<a href="http://sbr.se/" target="_blank" class="text-blue bold small">Svensk byggtjänst - Effektivare byggprocess</a>
 							</li>
 							<br>
 							<li>
-								<a href="../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" target="_blank" class="text-blue bold small">Konsumenttjänstlagen</a>
+								<a href="https://bkr.se/" target="_blank" class="text-blue bold small">Byggkeramikrådet - Sveriges stora auktoritet inom kakel och klinker</a>
 							</li>
 							<br>
 							<li>
-								<a href="../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" target="_blank" class="text-blue bold small">Hantverkarformuläret 14</a>
+								<a href="https://www.gvk.se/" target="_blank" class="text-blue bold small">GVK - AB Svensk Våtrumskontroll</a>
+							</li>
+							<br>
+							<li>
+								<a href="https://spef.org" target="_blank" class="text-blue bold small">SPEF - Branschföreningen för murat & putsat byggande</a>
+							</li>
+							<br>
+							<li>
+								<a href="https://www.sakervatten.se/" target="_blank" class="text-blue bold small">Säker Vatten - Hitta auktoriserade VVS-företag</a>
+							</li>
+							<br>
+							<li>
+								<a href="https://www.pvforetagen.se/" target="_blank" class="text-blue bold small">Plåt & Ventföretagen, bransch- och arbetsgivarorganisationen för plåtslageri, ventilation och stål- & lättbyggnad.</a>
+							</li>
+							<br>
+							<li>
+								<a href="http://stockholmsbf.se/" target="_blank" class="text-blue bold small">Stockholms Byggmästareförening Stockholms - Byggmästareförening är den lokala branschorganisationen för bygg-, anläggnings- och specialföretag i Stockholm</a>
+							</li>
+							<br>
+							<li>
+								<a href="http://www.maklarsamfundet.se/" target="_blank" class="text-blue bold small">Mäklarsamfundet - Branschorganisationen för fastighetsmäklare</a>
+							</li>
+							<br>
+							<li>
+								<a href="https://www.maleriforetagen.se/" target="_blank" class="text-blue bold small">Måleriföretagen i Sverige - Måleriföretagen är en bransch- och arbetsgivarorganisation med uppdraget att utveckla det professionella måleriet i Sverige. </a>
 							</li>
 						</ul>
 						<br>
-						<h2>Entreprenad</h2>
-						<ul class="left">
-							<li>
-								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank" class="text-blue bold small">x</a>
-							</li>
-							<br>
-							<li>
-								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank" class="text-blue bold small">x</a>
-							</li>
-							<br>
-							<li>
-								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="text-blue bold small">x</a>
-							</li>
-						</ul>
-						<br>
-						<h2>Bostadsrättsföreningar</h2>
-						<ul class="left">
-							<li>
-								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank" class="text-blue bold small">Slutbesiktning för BRF</a>
-							</li>
-							<br>
-							<li>
-								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank" class="text-blue bold small">Efterbesiktning för BRF</a>
-							</li>
-							<br>
-							<li>
-								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="text-blue bold small">Särskild besiktning för BRF</a>
-							</li>
-						</ul>
-						<br>
-						<h2>Privat</h2>
-						<ul class="left">
-							<li>
-								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank" class="text-blue bold small">x</a>
-							</li>
-							<br>
-							<li>
-								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank" class="text-blue bold small">x</a>
-							</li>
-							<br>
-							<li>
-								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="text-blue bold small">x</a>
-							</li>
-						</ul>
+
 					</div>
 
 				</div>
