making the images "broken"-friendly

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -183,21 +183,39 @@
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/brf/brf_slutbesiktning.pdf" target="_blank" class="box-74">
 									<div class="thumbnail-74">
-										<img src="../assets/img/backgrounds/brf_sb_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+										<img
+											src="../assets/img/backgrounds/brf_sb_cover.png"
+											class="wide hoverZoomLink"
+											title="Hur går en slutbesiktning till? - Slutbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas. "
+											alt="Hur går en slutbesiktning till? - Slutbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas."
+											height="280" width="300"
+										>
 									</div>
 								</a>
 							</li>
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/brf/brf_efterbesiktning.pdf" target="_blank" class="box-74">
 									<div class="thumbnail-74">
-										<img src="../assets/img/backgrounds/brf_eb_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+										<img
+											src="../assets/img/backgrounds/brf_eb_cover.png"
+											class="wide hoverZoomLink"
+											title="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
+											alt="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
+											height="280" width="300"
+										>
 									</div>
 								</a>
 							</li>
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/brf/brf_särskild besiktning.pdf" target="_blank" class="box-74">
 									<div class="thumbnail-74">
-										<img src="../assets/img/backgrounds/brf_ssb_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+										<img
+											src="../assets/img/backgrounds/brf_ssb_cover.png"
+											class="wide hoverZoomLink"
+											title="x"
+											alt="x"
+											height="280" width="300"
+										>
 									</div>
 								</a>
 							</li>
@@ -208,21 +226,39 @@
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" target="_blank" class="box-74">
 									<div class="thumbnail-74">
-										<img src="../assets/img/backgrounds/hantverkarformularet14_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+										<img
+											src="../assets/img/backgrounds/hantverkarformularet14_cover.png"
+											class="wide hoverZoomLink"
+											title="Hantverkarformuläret 14 - Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
+											alt="Hantverkarformuläret 14 - Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
+											height="280" width="300"
+										>
 									</div>
 								</a>
 							</li>
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" target="_blank" class="box-74">
 									<div class="thumbnail-74">
-										<img src="../assets/img/backgrounds/besiktningsmannaboken16_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+										<img
+											src="../assets/img/backgrounds/besiktningsmannaboken16_cover.png"
+											class="wide hoverZoomLink"
+											title="Besiktningsmannaboken 2016 - Handbok för besiktningar av nybyggda småhus"
+											alt="Besiktningsmannaboken 2016 - Handbok för besiktningar av nybyggda småhus"
+											height="280" width="300"
+										>
 									</div>
 								</a>
 							</li>
 							<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-3 fromCenter done" style="width: 28%">
 								<a href="../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" target="_blank" class="box-74">
 									<div class="thumbnail-74">
-										<img src="../assets/img/backgrounds/konsumenttjanstlagen_cover.png" class="wide hoverZoomLink" alt="Ikon av pdf-formatet">
+										<img
+											src="../assets/img/backgrounds/konsumenttjanstlagen_cover.png"
+											class="wide hoverZoomLink"
+											title="Konsumenttjänstlagen SFS 1985:716, Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
+											alt="Konsumenttjänstlagen SFS 1985:716, Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
+											height="280" width="300"
+										>
 									</div>
 								</a>
 							</li>
