Added ConnectPR as partner, merged lists and made logos static Merged ledning-list into one

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -217,8 +217,6 @@
 									<p class="micro bold text-blue">bjorn@besiktningsman.se</p>
 								</a>
 							</li>
-						</ul>
-						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
 								<h3>Jonny Seidel</h3>
 								<p class="micro bold">Arbetande styrelseordförande</p>
@@ -247,86 +245,110 @@
 				<h2 class="fix-10-12">Några uppdragsgivare och samarbetspartners</h2>
 			</div>
 		</div>
-	</section>
-
-	<section class="slide whiteSlide network margin-bottom-10" id="partners">
-					<div class="container-lg">
-						<div class="logos center">
-
-							<div class="row center-xs">
-									<ul class="fromLeft">
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/ssm.png" alt="SSM" />
-											</div>
-										</li>
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/ebab-logo.png" alt="Ebab" />
-											</div>
-										</li>
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="80" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
-											</div>
-										</li>
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="140" src="../assets/img/logos/ikano_red.png" alt="ikano" />
-											</div>
-										</li>
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/sollentunahem.png" alt="Sollentunahem" />
-											</div>
-										</li>
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/ffab.png" alt="FFAB" />
-											</div>
-										</li>
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/ncc.png" alt="NCC" />
-											</div>
-										</li>
-										<li class="margin-bottom-3">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/em.jpg" alt="EM" />
-											</div>
-										</li>
-									</ul>
-									<ul class="">
-										<li class="margin-bottom-5">
-											<div class="network-logo">
-												<img width="80" src="../assets/img/logos/byggvesta.png" alt="Byggvesta" />
-											</div>
-										</li>
-										<li class="margin-bottom-5">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/nordea.svg" alt="Nordea" />
-											</div>
-										</li>
-										<li class="margin-bottom-5">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
-											</div>
-										</li>
-										<li class="margin-bottom-5">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/hifab.jpg" alt="HIFAB" />
-											</div>
-										</li>
-										<li class="margin-bottom-5">
-											<div class="network-logo">
-												<img width="100" src="../assets/img/logos/icontrol.png" alt="icontrolapp.se" />
-											</div>
-										</li>
-									</ul>
-							</div>
-
-						</div>
-					</div>
+		<div class="container-lg">
+				<div class="fix-10-12">
+						<ul class="flex grid-68 tintLogos equal">
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/ssm.png" alt="SSM" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/ebab-logo.png" alt="Ebab" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="80" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="140" src="../assets/img/logos/ikano_red.png" alt="ikano" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/sollentunahem.png" alt="Sollentunahem" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/ffab.png" alt="FFAB" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/ncc.png" alt="NCC" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/em.jpg" alt="EM" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="80" src="../assets/img/logos/byggvesta.png" alt="Byggvesta" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/nordea.svg" alt="Nordea" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/hifab.jpg" alt="HIFAB" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/icontrol.png" alt="icontrolapp.se" />
+									</div>
+								</div>
+							</li>
+							<li class="margin-bottom-3 col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
+								<div class="table wide equalElement">
+									<div class="cell">
+										<img width="100" src="../assets/img/logos/connectpr.png" alt="connectPR" />
+									</div>
+								</div>
+							</li>
+						</ul>
+				</div>
+		</div>
 	</section>
 
 <!-- Footer -->
