--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -136,9 +136,11 @@
 				<div class="wrap">
 					<div class="fix-10-12">
 						<h1>
-							Sveriges ledande <br>entreprenadbesiktningsföretag <br> för nyproduktion och ROT.
+							Om oss
 						</h1>
 						<p>
+							Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT.
+							<br>
 							Bildat 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
 						</p>
 					</div>
