edited bm.se links from http to https

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -11,12 +11,12 @@
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<meta name="robots" content="noodp" />
-	<link rel="canonical" href="http://www.besiktningsman.se/om_oss" />
+	<link rel="canonical" href="https://www.besiktningsman.se/om_oss" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
 	<meta property="og:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
-	<meta property="og:url" content="http://www.besiktningsman.se/dokument" />
+	<meta property="og:url" content="https://www.besiktningsman.se/dokument" />
 	<meta property="og:site_name" content="Besiktningsman.se | Dokument">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
 	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
