--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade och oberoende besiktningsmän för fastighet samt utemiljö. Du hittar oss bland annat i Stockholm, Malmö och Göteborg." />
-	<link rel="canonical" href="http://www.besiktningsman.se/" />
+	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Digital besiktning för lönsammare byggprojekt" />
 	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta property="og:url" content="http://www.besiktningsman.se/" />
+	<meta property="og:url" content="https://www.besiktningsman.se/" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="assets/img/backgrounds/og_image.jpg" />
 	<meta property="og:image:width" content="1200">
