--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -11,12 +11,12 @@
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
-	<link rel="canonical" href="http://www.besiktningsman.se/tjanster/brf" />
+	<link rel="canonical" href="https://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
 	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta property="og:url" content="http://www.besiktningsman.se/tjanster/brf" />
+	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="../../assets/img/backgrounds/og_image.jpg" />
 	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
