added no follow tags to images

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -19,8 +19,8 @@
 	<meta property="og:url" content="https://www.besiktningsman.se/dokument" />
 	<meta property="og:site_name" content="Besiktningsman.se | Dokument">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.jpg" />
-	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<meta name="twitter:title" content="Här kan du läsa viktigt utbildningsmaterial gällande besiktningar" />
+	<meta name="twitter:description" content="Vi har skapat och samlat så mycket utbildningsmaterial som möjligt för att du som konsument ska kunna förstå dels byggprocessen men även hur relevanta besiktningar går till." />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
@@ -175,6 +175,7 @@
 											title="Hur går en slutbesiktning till? - Slutbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas. "
 											alt="Hur går en slutbesiktning till? - Slutbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som skall besiktigas."
 											height="280" width="300"
+											rel="nofollow"
 										>
 									</div>
 								</a>
@@ -188,6 +189,7 @@
 											title="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
 											alt="Hur fungerar en efterbesiktning? - Efterbesiktningen utförs vid den tid som står i kallelsen och där framgår även vad som ska besiktas."
 											height="280" width="300"
+											rel="nofollow"
 										>
 									</div>
 								</a>
@@ -201,6 +203,7 @@
 											title="x"
 											alt="x"
 											height="280" width="300"
+											rel="nofollow"
 										>
 									</div>
 								</a>
@@ -218,6 +221,7 @@
 											title="Hantverkarformuläret 14 - Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
 											alt="Hantverkarformuläret 14 - Den här avtalsmallen kan ni använda vid reparations- och ombyggnadsarbeten där beställaren är konsument och hantverkaren är näringsidkare."
 											height="280" width="300"
+											rel="nofollow"
 										>
 									</div>
 								</a>
@@ -231,6 +235,7 @@
 											title="Besiktningsmannaboken 2016 - Handbok för besiktningar av nybyggda småhus"
 											alt="Besiktningsmannaboken 2016 - Handbok för besiktningar av nybyggda småhus"
 											height="280" width="300"
+											rel="nofollow"
 										>
 									</div>
 								</a>
@@ -244,6 +249,7 @@
 											title="Konsumenttjänstlagen SFS 1985:716, Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 											alt="Konsumenttjänstlagen SFS 1985:716, Ditt skydd vid reparationer, arbeten på fastigheter och förvaring."
 											height="280" width="300"
+											rel="nofollow"
 										>
 									</div>
 								</a>
