have added company phone nr to all pages mobile menu

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -126,6 +126,13 @@
 						<p class="bold">Dokument</p>
 					</div>
 				</li>
+				<br>
+				<br>
+				<li>
+					<a href="tel:0101654000">
+						<p class="bold">Telefon: 010-165 40 00</p>
+					</a>
+				</li>
 			</ul>
 
 		</div>
