--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -99,33 +99,64 @@
 		</div>
 	</nav>
 
-	<!-- Sidebar -->
-	<nav class="sidebar white" data-sidebar-id="1">
-		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-		<div class="content">
-			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
-			<ul class="mainMenu text-blue">
-				<span class="bold small text-blueGrey">Navigation</span>
-				<li><a href="../#erbjudande"><p>Vårt erbjudande</p></a></li>
-				<br>
-				<br>
-				<li><a href="../kontakt/"><p>Kundkontakt</p></a></li>
-				<br>
-				<br>
-				<li><a href="../karriar/"><p>Karriär</p></a></li>
-				<br>
-				<br>
-				<li><a href="../om_oss/"><p>Om oss</p></a></li>
-				<br>
-				<br>
-				<li><a href="../nyheter/"><p>Publicerat & Press</p></a></li>
-				<br>
-				<br>
-				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold">Dokument</p></div></li>
-			</ul>
+<!-- Sidebar -->
+<nav class="sidebar white" data-sidebar-id="1">
+	<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+	<div class="content">
+		<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
+		<ul class="mainMenu text-blue">
+			<span class="bold small text-blueGrey">Navigation</span>
+			<li>
+				<a href="../#erbjudande">
+					<p>Vårt erbjudande</p>
+				</a>
+			</li>
+			<br>
+			<br>
+			<li>
+				<a href="../kontakt/">
+					<p>Kundkontakt</p>
+				</a>
+			</li>
+			<br>
+			<br>
+			<li>
+				<a href="../karriar/">
+					<p>Karriär</p>
+				</a>
+			</li>
+			<br>
+			<br>
+			<li>
+				<a href="../om_oss/">
+					<p>Om oss</p>
+				</a>
+			</li>
+			<br>
+			<br>
+			<li>
+				<a href="../nyheter/">
+					<p>Publicerat & Press</p>
+				</a>
+			</li>
+			<br>
+			<br>
+			<li>
+				<div class="popupTrigger" data-popup-id="docs">
+					<p class="bold">Dokument</p>
+				</div>
+			</li>
+			<br>
+			<br>
+			<li>
+				<a href="tel:0101654000">
+					<p class="bold">Telefon: 010-165 40 00</p>
+				</a>
+			</li>
+		</ul>
 
-		</div>
-	</nav>
+	</div>
+</nav>
 
 	<!-- typeform contact form --><!-- HEADER -->
 	<section class="slide fade contact" id="contactHeader">
