--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -125,6 +125,13 @@
 				<br>
 				<br>
 				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold">Dokument</p></div></li>
+				<br>
+				<br>
+				<li>
+					<a href="tel:0101654000">
+						<p class="bold">Telefon: 010-165 40 00</p>
+					</a>
+				</li>
 			</ul>
 
 		</div>
